--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -7,7 +7,7 @@ name: Rebuild kubetools
 
 on:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 3 * * *"
   push:
     branches: [ "main" ]
     # Publish semver tags as releases.
